[package]
name = "base64-lt"
version = "0.1.0"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-base64 = { git = "https://github.com/nicolasbauw/lib-base64" }
structopt = { version = "0.3.2", default-features = false }
